--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ nav ul li a.head:hover{
 .card .container1{
     padding-left: 20px;
     padding-right: 1px;
+    /* padding-top: 4px; */
 }
 
 
